# BTEXgenie

./: .gitignore  README.md  btex_env.yml  btex_env_release.yml  gitignore  pyproject.toml
HMMs/_packed/: C12D.hmm  C23D.hmm  TbuB.hmm  TbuC.hmm  TmoA.hmm  TmoB.hmm  TmoD.hmm  TmoF.hmm  TodB.hmm  TodC2.hmm  TomA5.hmm  aryl.hmm  bedC1.hmm  bedC2.hmm  benzaldehyde.hmm  bssA.hmm  bssC.hmm  ndoC.hmm  touF.hmm
HMMs/cutoffs/: hmm_cutoff.tsv
HMMs/flat/: TbuA2.hmm  TbuU.hmm  TbuV.hmm  TmoE.hmm  TodA.hmm  TomA3.hmm  touB.hmm  touC.hmm
benchmarck_scripts/: benchmark_7.py
btexhmm/: build_db_cli.py  circos.py  circos_cli.py  cli.py  find_contg_length.py  hmmscan.py  hmmsearch.py  kofamscan.py  logging_utils.py  vis_cli.py
btexhmm/data/: A_ko_category_map.tsv  btex_to_KO_map.tsv  pathway_map.tsv
btexhmm/data/flat/: TbuA1.hmm  TmoC.hmm  TodC1.hmm  TodD.hmm  TomA1.hmm  TomA2.hmm  TomA4.hmm  bssB.hmm  edoA1.hmm  edoA2.hmm  ndoB.hmm  touA.hmm  touD.hmm  xylA.hmm  xylM.hmm
btexhmm/hmms/: all_models.hmm.h3f  all_models.hmm.h3i  all_models.hmm.h3m  all_models.hmm.h3p
btexhmm/hmms/hmm_final_alignments/: bcrA_type_I.afa  bcrA_type_II.afa  bssA.afa  bssB.afa  catA.afa  ebdA.afa  ebdB.afa  ebdC.afa  edoA1.afa  edoA2.afa  ndoB.afa  tmoA_tbuA1_touA.afa  tmoB_tbuU_touB.afa  tmoC_tbuB_touC.afa  tmoD_tbuV_touD.afa  tmoE_tbuA2.afa  tmoF_tbuC_touF.afa  (+13 more)
btexhmm/test_genomes/: Aromatoleum_bremense_PbN1T.faa  Georgfuchsia_toluolica_G5G6.faa
scripts/: diamond.sh  hmmsearch.py  usearch.sh
visualization_scripts/: __init__.py  circos.R  circos.py  find_contig_length.py  visualize_pathways.R
(+6 files in other folders)
