[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btexhmm"
version = "0.1.0"
description = "BTEX HMM annotation and visualization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.scripts]
annotate-btex = "btexhmm.cli:main"
run-circos = "btexhmm.circos_cli:main"
vis-btex = "btexhmm.vis_cli:main"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["btexhmm", "visualization_scripts"]
exclude = ["img", "HMMs", "benchmarck_scripts", "scripts"]

[tool.setuptools.package-data]
"btexhmm" = ["data/*", "hmms/*"]
"visualization_scripts" = ["*.R"]
